[project]
name = "api-wwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 150

extend-exclude = [
    ".venv",
    "venv",
    "dist",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]